<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >
=======
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
>>>>>>> master/master

    <fragment
        android:id="@+id/nav_home"
        android:name="com.paquete.misericapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
<<<<<<< HEAD
        android:id="@+id/nav_reuniones"
        android:name="com.paquete.misericapp.ui.reuniones.ReunionesFragment"
        android:label="@string/menu_salidas"
        tools:layout="@layout/fragment_reuniones" />

    <fragment
        android:id="@+id/nav_salidas"
        android:name="com.paquete.misericapp.ui.salidas.SalidasFragment"
        android:label="@string/menu_salidas"
        tools:layout="@layout/fragment_salidas" />

    <fragment
        android:id="@+id/nav_sonido"
        android:name="com.paquete.misericapp.ui.sonido.SonidoFragment"
        android:label="@string/menu_sonido"
        tools:layout="@layout/fragment_sonido" />

    <fragment
        android:id="@+id/nav_grupos"
        android:name="com.paquete.misericapp.ui.grupos.GruposFragment"
        android:label="@string/menu_grupos"
        tools:layout="@layout/fragment_grupos" />
=======
        android:id="@+id/nav_gallery"
        android:name="com.paquete.misericapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.paquete.misericapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.paquete.misericapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
>>>>>>> master/master

    <fragment
        android:id="@+id/nav_share"
        android:name="com.paquete.misericapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.paquete.misericapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
<<<<<<< HEAD

    <fragment
        android:id="@+id/nav_informe"
        android:name="com.paquete.misericapp.ui.informe.InformeFragment"
        android:label="@string/menu_informe"
        tools:layout="@layout/fragment_informe" />
=======
>>>>>>> master/master
</navigation>