<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/actionbar_toolbar"/>

    <TextView
        android:id="@+id/text_informe"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="MARZO 2020"
        android:background="@color/md_purple_A700"
        android:gravity="center"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:fillViewport="true"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="0dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray"
                    android:layout_marginTop="5dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/send_horas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_sendReport"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray"
                    android:layout_marginTop="5dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/send_public"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_sendPublic"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray"
                    android:layout_marginTop="5dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/send_videos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_sendVideos"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray"
                    android:layout_marginTop="5dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/send_revisitas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_sendRevisitas"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray"
                    android:layout_marginTop="5dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/send_estudios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_sendEstudios"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_sendreport"
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:text="@string/send_report"
                    android:textSize="18sp"
                    android:theme="@style/RaisedButtonDark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nota_report"
                    android:layout_marginTop="20dp"
                    />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>