<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
<<<<<<< HEAD
    android:background="@color/colorPrimary"
    >
=======
    android:background="@color/colorPrimary" >
>>>>>>> master/master

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
<<<<<<< HEAD
        android:weightSum="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
=======
        android:weightSum="1">
>>>>>>> master/master

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
<<<<<<< HEAD
            android:layout_weight="0.65"
=======
            android:layout_weight="0.6"
>>>>>>> master/master
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="236dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@drawable/tablero" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="match_parent"
<<<<<<< HEAD
                android:layout_height="wrap_content"
=======
                android:layout_height="match_parent"
>>>>>>> master/master
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
<<<<<<< HEAD
                    android:theme="@style/EditTextBlack"
=======
                    android:theme="@style/EditTextGray"
>>>>>>> master/master
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
<<<<<<< HEAD
                    android:theme="@style/EditTextBlack"
=======
                    android:theme="@style/EditTextGray"
>>>>>>> master/master
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goEnter"
                    android:layout_marginTop="@dimen/marginbuttoningreso"
                    />
<<<<<<< HEAD
                <Button
                    android:id="@+id/loginprov"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/provisorio"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goEnterProv"
                    android:layout_marginTop="15dp"
                    />
=======
>>>>>>> master/master
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        />
                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:onClick="goCreateAccount"
                        />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>