<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background">

    <include layout="@layout/actionbar_toolbar"/>

    <TextView
        android:id="@+id/text_informe"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/mes_informe"
        android:background="?colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="?editTextColor"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:fillViewport="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="0dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/editTextColorGray"
                android:textSize="@dimen/edittext_textsize_login"
                android:textColorPrimary="@color/md_black_1000"
                android:colorAccent="@color/editTextColorGray"
                android:colorControlNormal="@color/editTextColorGray"
                android:colorControlActivated="@color/editTextColorGray"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/send_horas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sendReport"
                    android:textSize="@dimen/informe"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/editTextColorGray"
                android:textSize="@dimen/edittext_textsize_login"
                android:textColorPrimary="@color/md_black_1000"
                android:colorAccent="@color/editTextColorGray"
                android:colorControlNormal="@color/editTextColorGray"
                android:colorControlActivated="@color/editTextColorGray"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/send_public"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sendPublic"
                    android:textSize="@dimen/informe"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/editTextColorGray"
                android:textSize="@dimen/edittext_textsize_login"
                android:textColorPrimary="@color/md_black_1000"
                android:colorAccent="@color/editTextColorGray"
                android:colorControlNormal="@color/editTextColorGray"
                android:colorControlActivated="@color/editTextColorGray"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/send_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sendVideos"
                    android:textSize="@dimen/informe"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/editTextColorGray"
                android:textSize="@dimen/edittext_textsize_login"
                android:textColorPrimary="@color/md_black_1000"
                android:colorAccent="@color/editTextColorGray"
                android:colorControlNormal="@color/editTextColorGray"
                android:colorControlActivated="@color/editTextColorGray"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/send_revisitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sendRevisitas"
                    android:textSize="@dimen/informe"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/editTextColorGray"
                android:textSize="@dimen/edittext_textsize_login"
                android:textColorPrimary="@color/md_black_1000"
                android:colorAccent="@color/editTextColorGray"
                android:colorControlNormal="@color/editTextColorGray"
                android:colorControlActivated="@color/editTextColorGray"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/send_estudios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_sendEstudios"
                    android:textSize="@dimen/informe"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sendreport"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/send_report"
                android:textSize="18sp"
                android:background="?colorAccent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nota_report"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textSize="17sp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>